--- a/css/component.css
+++ b/css/component.css
@@ -1,5 +1,4 @@
-html, body, 
-.container {
+html, body, .container {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -181,8 +180,7 @@ html, body,
 }
 
 /* All transitions */
-.side,
-.page {
+.side, .page {
 	-webkit-transition: -webkit-transform 0.6s;
 	transition: transform 0.6s;
 }
@@ -197,8 +195,7 @@ html, body,
 	transition: transform 0.6s, top 0.6s;
 }
 
-.intro-content h1,
-.back {
+.intro-content h1, .back {
 	-webkit-transition: opacity 0.3s;
 	transition: opacity 0.3s;
 }
@@ -316,7 +313,7 @@ html, body,
 
 	.mandala {
 		top: 7%;
-    	width: 122px;
+		width: 122px;
 	}
 }
 
