--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,27 @@
-@import url('./font.css');
-
 :root {
-    --accent-color: #D0D5C6;
+    --darken-color: #12191C;
     --primary-color-accent: #CFCFBF;
     --primary-color: #29253e;
     --primary-color-dark: #606166;
     --dark-color: #09131F;
     --padding-side-section: 20rem;
+    --height-canvas: 28rem;
 }
+
+/*Import Font*/
+@font-face {
+    font-family: 'Arima Madurai';
+    src: url('../font/Arima_Madurai/ArimaMadurai-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Arima Madurai';
+    src: url('../font/Arima_Madurai/ArimaMadurai-Bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
 html, body {
-    font-family: 'Quattrocento', serif;
+    font-family: 'Arima Madurai', Helvetica, cursive;
+    line-height: 2;
 }
 .btn:hover, .btn:active, .btn:focus {
     cursor: pointer;
@@ -20,29 +32,23 @@ html, body {
     background-image: url('../img/universe.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 22rem;
-    display: flex;
-    display: -webkit-flex;
-    align-content: center;
+    height: var(--height-canvas, 28rem);
 }
-.section-canvas canvas {
+.section-canvas-info {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+    right: 0;
+    top: calc(var(--height-canvas)/5);
+    text-align: center;
 }
-.section-canvas img {
-    width: 9rem;
-    margin: auto;
+.section-canvas-info img {
+    width: 12rem;
     -webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
     clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 }
 .section-biography {
-    background-color: var(--accent-color);
-    color: var(--dark-color);
+    background-color: var(--dark-color);
+    color: var(--white);
 }
 .btn-flags {
     position: fixed;
@@ -54,7 +60,7 @@ html, body {
     display: none;
 }
 .btn-flags input + label {
-    padding: .2rem .5rem .3rem;
+    padding: 0 .3rem;
     margin: 0;
     border-radius: .15rem;
 }
@@ -62,30 +68,29 @@ html, body {
     background-color: var(--primary-color);
     cursor: pointer;
 }
-.flag-en {
-    width: 2rem;
-}
-.flag-es {
-    width: 2.5rem;
+.flags {
+    width: 1.7rem;
+    height: 1rem;
 }
 .section {
     padding: 3rem var(--padding-side-section);
 }
 .section-skill {
-    background-color: var(--primary-color-dark);
-    color: var(--light);
+    background-color: var(--darken-color);
+    color: var(--white);
 }
 .section-people {
     background-color: var(--primary-color-accent);
 }
 .section-footer {
     padding: 1rem 2rem;
-    color: var(--light);
-    background-color: var(--dark-color);
+    color: var(--dark-color);
+    background-color: var(--light);
 }
 .btn-social {
     margin: auto;
     display: block;
+    border-color: var(--white);
     background-color: var(--primary-color);
     color: var(--white);
     font-weight: bold;
@@ -113,22 +118,22 @@ html, body {
     -moz-animation: bounce-top var(--duration-animation-social, .8s) linear;
     -o-animation: bounce-top var(--duration-animation-social, .8s) linear;
 }
-.btn-social .btn:first-child {
+.btn-social .btn:nth-child(2) {
     color: #24292e;
 }
-.btn-social .btn:nth-child(2) {
+.btn-social .btn:nth-child(3) {
     color: #1da1f2;
     animation-duration: var(--duration-animation-social, .7s);
 }
-.btn-social .btn:nth-child(3) {
+.btn-social .btn:nth-child(4) {
     color: #101010;
     animation-duration: var(--duration-animation-social, .85s);
 }
-.btn-social .btn:nth-child(4) {
+.btn-social .btn:nth-child(5) {
     color: #db4437;
     animation-duration: var(--duration-animation-social, .65s);
 }
-.btn-social .btn:nth-child(5) {
+.btn-social .btn:nth-child(6) {
     color: #0077b5;
     animation-duration: var(--duration-animation-social, .75s);
 }
@@ -173,6 +178,7 @@ html, body {
     padding: 0;
     text-align: center;
     list-style: none;
+    color: var(--white);
 }
 .swatch-item {
     width: 100%;
@@ -207,7 +213,7 @@ html, body {
     height: 1.2rem;
     background: var(--white);
     margin: -.6rem 0 0 -.6rem;
-    box-shadow: inset 0 1px 1px var(--white), inset 0 -0.3em 0.2em var(--accent-color), 0 0 0.6em rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 1px 1px var(--white), inset 0 -0.3em 0.2em var(--primary-color-accent), 0 0 0.6em rgba(0, 0, 0, 0.2);
 }
 .swatch-item:last-of-type:before {
     content: "";
