--- a/css/styles.css
+++ b/css/styles.css
@@ -41,16 +41,22 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 { font-size: 2.5rem; }
 
+h2 { font-size: 2rem; }
+
 h4 { font-size: 1.5rem; }
 
-/* .btn:hover, .btn:active, .btn:focus {
-    cursor: pointer;
-    outline: none;
-} */
-
-.text-white {
-    color: var(--white);
+img {
+    vertical-align: middle;
+    border-style: none;
 }
+
+.text-white { color: var(--white); }
+
+.text-center { text-align: center; }
+
+.text-left { text-align: left; }
+
+.section { padding: 3rem var(--padding-side-section); }
 
 /* Section canvas */
 .section-canvas {
@@ -79,13 +85,8 @@ h4 { font-size: 1.5rem; }
     clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 }
 
-.section-canvas__title {
-    margin-top: 1rem;
-}
-.section-biography {
-    background-color: var(--purple-dark);
-    color: var(--white);
-}
+.section-canvas__title { margin-top: 1rem; }
+/* Finish section canvas */
 
 /* Checkbox change language */
 .btn-language {
@@ -95,118 +96,113 @@ h4 { font-size: 1.5rem; }
     z-index: 1;
     display: inline-flex;
 }
-.btn-language__checkbox {
-    display: none;
-}
+
+.btn-language__checkbox { display: none; }
+
 .btn-language__checkbox + label {
     padding: 0 .3rem;
     margin: 0;
     border-radius: .15rem;
+    line-height: 1.5;
 }
+
 .btn-language__checkbox:checked + label, .btn-language label:hover {
     background-color: var(--white);
     cursor: pointer;
 }
+
 .btn-language__flag {
     width: 1.7rem;
     height: 1rem;
 }
-.section {
-    padding: 3rem var(--padding-side-section);
+/* Finish chechbox language */
+
+.section-biography {
+    background-color: var(--purple-dark);
+    color: var(--white);
 }
-.section-skill {
+
+.btn {
+    outline: none;
+    border: none;
+    border-radius: .3rem;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-family: inherit;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
+
+.btn__social {
+    display: block;
+    margin: 0 auto;
+    border: .08rem solid var(--white);
+    background-color: var(--red-dark);
+    color: var(--white);
+    font-weight: bold;
+    transition: all .2s;
+    position: relative;
+    width: 10rem;
+    overflow: hidden;
+}
+
+.btn-links-inside {
+    position: absolute;
+    left: 0;
+    top: -2rem;
+    transition: top .2s linear;
+}
+
+.btn-links-inside__item {
+    font-size: 1.2rem;
+    padding: 0 .3rem;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.btn-links-inside__item:first-child { color: #24292e; }
+
+.btn-links-inside__item:nth-child(2) { color: #1da1f2; }
+
+.btn-links-inside__item:nth-child(3) { color: #101010; }
+
+.btn-links-inside__item:nth-child(4) { color: #db4437; }
+
+.btn-links-inside__item:last-child { color: #0077b5; }
+
+.btn__social:hover, .btn__social:active, .btn__social:focus {
     background-color: var(--color-accent);
+    border-color: var(--red-dark);
+    box-shadow: 0 0 2rem var(--white);
 }
+
+.btn__social:hover .btn-content-hide,
+.btn__social:active .btn-content-hide,
+.btn__social:focus .btn-content-hide {
+    transform: translateY(2rem);
+    transition: transform .2s linear;
+}
+
+.btn__social:hover .btn-links-inside,
+.btn__social:active .btn-links-inside,
+.btn__social:focus .btn-links-inside { top: .35rem; }
+
+.section-skill { background-color: var(--color-accent); }
+
 .section-people {
     background-color: var(--red-dark);
     color: var(--white);
 }
+
 .section-footer {
     padding: 1rem 2rem;
     color: var(--purple-dark);
     background-color: var(--light);
-}
-.btn-social {
-    margin: auto;
-    display: block;
-    border-color: var(--white);
-    background-color: var(--primary-color);
-    color: var(--white);
-    font-weight: bold;
-    transition: all .3s;
-    -webkit-transition: all .3s;
-    -o-transition: all .3s;
-    -moz-transition: all .3s;
-    position: relative;
-}
-.btn-social:hover, .btn-social:active, .btn-social:focus {
-    color: var(--primary-color);
-    background-color: var(--color-accent);
-    border-color: var(--primary-color);
-}
-.btn-social .btn {
-    background-color: transparent;
-    font-size: 1.3rem;
-    padding: .2rem .3rem 0;
-    display: none;
-}
-.btn-social:hover .btn {
-    display: inline-flex;
-    animation: bounce-top var(--duration-animation-social, .8s) linear;
-    -webkit-animation: bounce-top var(--duration-animation-social, .8s) linear;
-    -moz-animation: bounce-top var(--duration-animation-social, .8s) linear;
-    -o-animation: bounce-top var(--duration-animation-social, .8s) linear;
-}
-.btn-social .btn:nth-child(2) {
-    color: #24292e;
-}
-.btn-social .btn:nth-child(3) {
-    color: #1da1f2;
-    animation-duration: var(--duration-animation-social, .7s);
-}
-.btn-social .btn:nth-child(4) {
-    color: #101010;
-    animation-duration: var(--duration-animation-social, .85s);
-}
-.btn-social .btn:nth-child(5) {
-    color: #db4437;
-    animation-duration: var(--duration-animation-social, .65s);
-}
-.btn-social .btn:nth-child(6) {
-    color: #0077b5;
-    animation-duration: var(--duration-animation-social, .75s);
-}
-@keyframes bounce-top {
-    0% { transform: translateY(-1.5rem); }
-    25% { transform: translateY(.7rem); }
-    50% { transform: translateY(-.5rem ); }
-    75% { transform: translateY(.3rem); }
-    90% { transform: translateY(-.5rem ); }
-    100% { transform: translateY(-.1rem); }
-}
-@-webkit-keyframes bounce-top {
-    0% { transform: translateY(-1.5rem); }
-    25% { transform: translateY(.7rem); }
-    50% { transform: translateY(-.5rem ); }
-    75% { transform: translateY(.3rem); }
-    90% { transform: translateY(-.5rem ); }
-    100% { transform: translateY(-.1rem); }
-}
-@-moz-keyframes bounce-top {
-    0% { transform: translateY(-1.5rem); }
-    25% { transform: translateY(.7rem); }
-    50% { transform: translateY(-.5rem ); }
-    75% { transform: translateY(.3rem); }
-    90% { transform: translateY(-.5rem ); }
-    100% { transform: translateY(-.1rem); }
-}
-@-o-keyframes bounce-top {
-    0% { transform: translateY(-1.5rem); }
-    25% { transform: translateY(.7rem); }
-    50% { transform: translateY(-.5rem ); }
-    75% { transform: translateY(.3rem); }
-    90% { transform: translateY(-.5rem ); }
-    100% { transform: translateY(-.1rem); }
 }
 
 /* Swatch book */
@@ -274,24 +270,24 @@ h4 { font-size: 1.5rem; }
     margin: auto;
     display: block;
 }
+
 /* Responsive */
-@media (max-width: 575px) {
-    :root {
-        --padding-side-section: 2rem;
-    }
+@media (max-width: 36rem) {
+    :root { --padding-side-section: 2rem; }
 }
-@media (min-width: 576px) and (max-width: 767px) {
-    :root {
-        --padding-side-section: 6rem;
-    }
+
+@media (min-width: 36.01rem) and (max-width: 48rem) {
+    :root { --padding-side-section: 6rem; }
 }
-@media (min-width: 768px) and (max-width: 991px) { 
-    :root {
-        --padding-side-section: 10rem;
-    }
+
+@media (min-width: 48.01rem) and (max-width: 62rem) {
+    :root { --padding-side-section: 10rem; }
 }
-@media (min-width: 992px) and (max-width: 1199px) {
-    :root {
-        --padding-side-section: 15rem;
-    }
+
+@media (min-width: 62.01rem) and (max-width: 75rem) {
+    :root { --padding-side-section: 15rem; }
+}
+
+@media (min-width: 87.5rem) {
+    :root { --padding-side-section: 25rem; }
 }
