--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 :root {
-    --red-dark: #791B21;
-    --color-accent: #E6DBA7;
-    --primary-color: #29253E;
-    --purple-dark: #09131F;
-    --padding-side-section: 20rem;
-    --height-canvas: 28rem;
-    --white: #fff;
+    --red-dark:                   #791B21;
+    --color-accent:               #E6DBA7;
+    --primary-color:              #29253E;
+    --purple-dark:                #09131F;
+    --white:                      #fff;
+    --padding-side-section:         20rem;
+    --padding-side-section-skills:  17rem;
+    --center-skills:                24rem;
+    --height-skills:                25rem;
+    --height-canvas:                28rem;
 }
 
 /*Import Font*/
@@ -194,8 +197,6 @@ img {
 .btn__social:active .btn-links-inside,
 .btn__social:focus .btn-links-inside { top: .35rem; }
 
-.section-skill { background-color: var(--color-accent); }
-
 .section-people {
     background-color: var(--red-dark);
     color: var(--white);
@@ -213,69 +214,6 @@ img {
     font-weight: bold;
 }
 
-.section-footer {
-    padding: 1rem 2rem;
-    color: var(--purple-dark);
-    background-color: var(--light);
-}
-
-/* Swatch book */
-.swatch {
-    position: relative;
-    height: 2rem;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    list-style: none;
-    color: var(--white);
-}
-.swatch-item {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border-radius: .3rem;
-    border: 0.1em solid rgba(0, 0, 0, 0.15);
-    box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3), inset 0 6rem 6rem rgba(255, 255, 255, 0.1);
-    transform-origin: 6% 45%;
-    transition: .3s;
-}
-.swatch-item:hover {
-    cursor: pointer;
-    border-color: var(--white);
-}
-.swatch-item.active ~ .swatch-item {
-    transform: rotate(-110deg) !important;
-}
-.mb-swatch {
-    margin-bottom: 6rem;
-}
-.title-skill {
-    margin-bottom: 7rem;
-}
-.swatch-item:last-of-type:after {
-    content: "";
-    position: absolute;
-    left: 5%;
-    top: 50%;
-    border-radius: 50%;
-    width: 1.2rem;
-    height: 1.2rem;
-    background: var(--white);
-    margin: -.6rem 0 0 -.6rem;
-    box-shadow: inset 0 1px 1px var(--white), inset 0 -0.3em 0.2em var(--color-accent), 0 0 0.6em rgba(0, 0, 0, 0.2);
-}
-.swatch-item:last-of-type:before {
-    content: "";
-    position: absolute;
-    left: .4rem;
-    bottom: .9rem;
-    width: 1rem;
-    height: .15rem;
-    background-color: rgba(0, 0, 0, 0.1);
-    z-index: 2;
-}
-/* End swatch book */
-
 .img-people {
     -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 58% 94%, 51% 100%, 44% 94%, 0 93%);
     clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 58% 94%, 51% 100%, 44% 94%, 0 93%);
@@ -285,24 +223,114 @@ img {
     display: block;
 }
 
+.section-footer {
+    padding: 1rem 2rem;
+    color: var(--purple-dark);
+    background-color: var(--light);
+}
+
+.section-skill {
+    background-color: var(--color-accent);
+    padding: 3rem var(--padding-side-section-skills);
+}
+
+.skills {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    list-style: none;
+    height: var(--height-skills);
+}
+
+.skills__item {
+    border-radius: .3rem;
+    padding: .1rem .6rem;
+    position: absolute;
+    border-style: solid;
+    border-width: .1rem;
+    font-weight: bold;
+    color: var(--primary-color);
+    transform: translate(var(--center-skills), calc(var(--height-skills)/2)) scale(0);
+    transition: transform .3s linear;
+}
+
+.skills__item--principal {
+    border-radius: .3rem;
+    padding: .1rem .6rem;
+    position: absolute;
+    font-weight: bold;
+    left: 0;
+    right: 0;
+    top: 50%;
+    margin: 0 auto;
+    width: 4rem;
+    border: .09rem solid var(--white);
+    cursor: pointer;
+    background-color: var(--primary-color);
+    transition: all .3s linear;
+}
+
+.skills__item--principal:hover {
+    background-color: transparent;
+    border-color: var(--primary-color);
+    color: var(--primary-color);
+    box-shadow: .2rem .3rem 1rem rgba(0,0,0,.2);
+}
+
+.skills__item--principal--active {
+    background-color: var(--red-dark);
+    border-color: var(--white);
+    color: var(--white);
+    box-shadow: .2rem .3rem 1rem rgba(0,0,0,.2);    
+}
+
 /* Responsive */
 @media (max-width: 36rem) {
-    :root { --padding-side-section: 2rem; }
+    :root {
+        --padding-side-section: 2rem;
+        --padding-side-section-skills: 1rem;
+        --center-skills: 1rem;
+        --height-skills: 27rem;
+    }
+
     .container-people { grid-template-columns: 1fr 1fr; }
+
+    .skills { overflow-x: auto; }
+
+    .skills__item--principal {
+        margin: 0;
+        left: .5rem;
+    }
 }
 
 @media (min-width: 36.01rem) and (max-width: 48rem) {
-    :root { --padding-side-section: 6rem; }
+    :root {
+        --padding-side-section: 6rem;
+        --padding-side-section-skills: 5rem;
+        --center-skills: 11rem;
+    }
 }
 
 @media (min-width: 48.01rem) and (max-width: 62rem) {
-    :root { --padding-side-section: 10rem; }
+    :root {
+        --padding-side-section: 10rem;
+        --padding-side-section-skills: 5rem;
+        --center-skills: 19rem;
+    }
 }
 
 @media (min-width: 62.01rem) and (max-width: 75rem) {
-    :root { --padding-side-section: 15rem; }
+    :root {
+        --padding-side-section: 15rem;
+        --padding-side-section-skills: 10rem;
+        --center-skills: 20rem;
+    }
 }
 
 @media (min-width: 87.5rem) {
-    :root { --padding-side-section: 25rem; }
+    :root {
+        --padding-side-section: 25rem;
+        --padding-side-section-skills: 20rem;
+    }
 }
