--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+}
