--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -2,28 +2,28 @@
   color: var(--cod-gray);
   font-size: 3rem;
   font-weight: 500;
-  line-height: 1.1;
+  line-height: 1.19;
 }
 
 .small-title {
   color: var(--cod-gray);
   font-size: 2.25rem;
-  font-weight: 400;
-  line-height: 1.17;
+  font-weight: 500;
+  line-height: 1.19;
 }
 
 .big-text {
   color: var(--cod-gray);
   font-size: 1.25rem;
   font-weight: 500;
-  line-height: 1.17;
+  line-height: 1.19;
 }
 
 .base-text {
   color: var(--cod-gray);
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.1;
+  line-height: 1.18;
 }
 
 .small-text {
@@ -35,6 +35,10 @@
 
 .fw-bold {
   font-weight: 700;
+}
+
+.fw-normal {
+  font-weight: 400;
 }
 
 .fw-thin {
