--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -10,5 +10,7 @@
   --bismark: #3F627B;
   --cod-gray: #191919;
   --skeptica: #C9E5D9;
+  --white: #FFF;
   --wild-sand: #F5F5F5;
+  --woodsmoke: #171D1D;
 }
