--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+strong {
+  font-weight: 700;
+}
+
 .main-content {
   display: flex;
   flex-direction: column;
