--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -7,9 +7,12 @@
 
 /* Colors */
 :root {
-  --bismark: #3F627B;
+  --bismark: #385264;
   --cod-gray: #191919;
+  --silver-tree: #71B69D;
   --skeptica: #C9E5D9;
+  --tom-thumb: #40593F;
+  --wheatfield: #F4F0D2;
   --white: #FFF;
   --wild-sand: #F5F5F5;
   --woodsmoke: #171D1D;
