--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -9,8 +9,10 @@
 :root {
   --bismark: #385264;
   --cod-gray: #191919;
+  --green-kelp: #2A3720;
   --silver-tree: #71B69D;
   --skeptica: #C9E5D9;
+  --thunder: #1D1A1D;
   --tom-thumb: #40593F;
   --wheatfield: #F4F0D2;
   --white: #FFF;
