--- a/src/sections/Challenges/styles.module.css
+++ b/src/sections/Challenges/styles.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 3.75rem 2rem;
+  padding: 3.75rem 2rem 3rem;
 }
 
 .title {
