--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -9,6 +9,7 @@
 :root {
   --bismark: #385264;
   --cod-gray: #191919;
+  --gray-nurse: #EBEEE9;
   --green-kelp: #2A3720;
   --silver-tree: #71B69D;
   --skeptica: #C9E5D9;
