--- a/src/sections/Main/styles.module.css
+++ b/src/sections/Main/styles.module.css
@@ -1,12 +1,13 @@
 .container {
-  background: var(--wild-sand) url('../../assets/medellin.png') no-repeat center / cover;
+  background: var(--wild-sand) url('../../assets/medellin_3.png') no-repeat center / cover;
+  --intersection: 0;
   min-height: 100vh;
   position: relative;
   width: 100%;
 }
 
 .header {
-  animation: fadeInUp var(--quick-transition-duration) var(--transition-function) 500ms forwards;
+  animation: fadeInUp var(--quick-transition-duration) var(--transition-function) 800ms forwards;
   display: flex;
   flex-direction: column;
   left: 0;
@@ -18,6 +19,35 @@
   transform: translateY(50%);
   user-select: none;
   width: fit-content;
+}
+
+.parallax {
+  background: no-repeat center / cover;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.tree {
+  background-image: url('../../assets/medellin_1.png');
+  transform: translate3d(0, calc(-200px * var(--intersection)), 0);
+  z-index: 2;
+}
+
+.mountain {
+  background-image: url('../../assets/medellin_2.png');
+  transform: translate3d(0, calc(-165px * var(--intersection)), 0);
+  z-index: 1;
+}
+
+.interaction {
+  height: 20rem;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 100%;
 }
 
 @keyframes fadeInUp {
