--- a/src/sections/Main/styles.module.css
+++ b/src/sections/Main/styles.module.css
@@ -1,24 +1,22 @@
 .container {
   background: var(--wild-sand) url('../../assets/medellin_3.png') no-repeat center / cover;
-  --intersection: 0;
   min-height: 100vh;
   position: relative;
   width: 100%;
 }
 
 .header {
-  animation: fadeInUp var(--quick-transition-duration) var(--transition-function) 800ms forwards;
   display: flex;
   flex-direction: column;
   left: 0;
   margin: 0 auto;
-  opacity: 0;
   position: absolute;
   right: 0;
   top: 37vh;
-  transform: translateY(50%);
+  transform: translate3d(0, 50%, 0);
   user-select: none;
   width: fit-content;
+  will-change: transform;
 }
 
 .parallax {
@@ -32,31 +30,18 @@
 
 .tree {
   background-image: url('../../assets/medellin_1.png');
-  transform: translate3d(0, calc(-200px * var(--intersection)), 0);
   z-index: 2;
 }
 
 .mountain {
   background-image: url('../../assets/medellin_2.png');
-  transform: translate3d(0, calc(-165px * var(--intersection)), 0);
   z-index: 1;
 }
 
 .interaction {
-  height: 20rem;
+  height: 40vh;
   left: 0;
   position: absolute;
   right: 0;
   top: 100%;
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(50%);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
