--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,24 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import "./normalize.css";
+@import "./font.css";
+@import "./typography.css";
+@import "./variables.css";
 
 * {
-  box-sizing: border-box;
+  font-family: "Rubik", "Helvetica Neue", sans-serif;
+}
+
+body {
+  background-color: var(--wild-sand);
+  font-family: "Rubik", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+strong {
+  font-weight: 700;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
 }
