--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,6 +9,7 @@
   --cod-gray: #191919;
   --gray-nurse: #EBEEE9;
   --green-kelp: #2A3720;
+  --madison: #0D3B66;
   --silver-tree: #71B69D;
   --skeptica: #C9E5D9;
   --thunder: #1D1A1D;
