--- a/sections/Challenges/styles.module.css
+++ b/sections/Challenges/styles.module.css
@@ -19,7 +19,7 @@
 
 .link-container {
   display: grid;
-  grid-gap: 2.5rem;
+  gap: 2.5rem;
   grid-template-columns: repeat(auto-fill, minmax(20.63rem, 1fr));
   margin: 0 auto;
   margin-bottom: 2.5rem;
