--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,20 @@
 :root {
+  /* Theme colors */
+  --primary-text-color: #001E1D;
+  --primary-color: #004643;
+  --highlight-color: #E16162;
+  --secondary-color: #ABD1C6;
+  --secondary-highlight-color: #F9BC60;
+  --secondary-light-color: #F2F7F5;
+  --tertiary-color: #08232B;
+  --gradient-start-color: #D6E598;
+  --gradient-end-color: #1B9162;
+  /* End theme colors */
+
+  --ceramic: #FFFEFA;
+  --white: #FFFFFE;
+  --gray: #E8E4E6;
+
   --max-width: 90rem;
 }
 
@@ -19,6 +35,70 @@
 
 html,
 body {
+  background-color: var(--ceramic);
+  color: var(--primary-text-color);
   max-width: 100vw;
   min-height: 100vh;
 }
+
+/* Start style guide */
+.heading-1 {
+  font-family: var(--font-chubbo);
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.heading-2 {
+  font-family: var(--font-chubbo);
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.heading-3 {
+  font-family: var(--font-chubbo);
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.heading-4 {
+  font-family: var(--font-chubbo);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.base-text {
+  font-family: var(--font-gambetta);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.highlighted {
+  font-family: var(--font-gambetta);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.small {
+  font-family: var(--font-gambetta);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.fw-bold {
+  font-weight: 700;
+}
+/* Finish style guide */
