--- a/src/app/home-sections/Main/styles.module.css
+++ b/src/app/home-sections/Main/styles.module.css
@@ -1,33 +1,31 @@
 .container {
-  background: var(--wild-sand) url("/assets/medellin.png") no-repeat center / cover;
   min-height: 100vh;
   position: relative;
   width: 100%;
+}
+
+.cover-bg {
+  object-fit: cover;
 }
 
 .header {
   display: flex;
   flex-direction: column;
   left: 0;
-  margin: 0 auto;
   position: absolute;
   right: 0;
-  top: 37vh;
-  transform: translate3d(0, 50%, 0);
+  top: 30vh;
   user-select: none;
-  width: fit-content;
   will-change: transform;
+  z-index: 1;
 }
 
 .mountain {
-  background: no-repeat center / cover;
-  background-image: url("/assets/mountains.png");
   bottom: 0;
   left: 0;
   position: absolute;
   right: 0;
-  top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .interaction {
