--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,3 +3,16 @@
   flex-direction: column;
   width: 100%;
 }
+
+.error {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.btn-error {
+  background-color: var(--highlight-color);
+}
