--- a/src/app/home-sections/Projects/styles.module.css
+++ b/src/app/home-sections/Projects/styles.module.css
@@ -165,7 +165,7 @@
   align-items: center;
   background: linear-gradient(180deg, transparent 0%, var(--secondary-light-color) 50%);
   backdrop-filter: blur(4px);
-  box-shadow: 0px -4px 10px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px -4px 10px 0 rgba(0, 0, 0, 0.15);
   display: flex;
   justify-content: center;
   inset: auto 0 0;
