--- a/src/app/home-sections/AdventCSS/styles.module.css
+++ b/src/app/home-sections/AdventCSS/styles.module.css
@@ -21,15 +21,20 @@
 
 .link-button {
   align-items: center;
-  background-color: var(--secondary-highlight-color);
-  border: 0.0625rem solid var(--secondary-highlight-color);
-  color: var(--primary-text-color);
+  background-color: var(--highlight-color);
+  border: 0.0625rem solid var(--highlight-color);
+  color: var(--white);
   display: flex;
   text-decoration: none;
 }
 
 .link-button:is(:hover, :active) {
   background-color: var(--white);
+  color: var(--highlight-color);
+}
+
+.link-button:is(:hover, :active) svg path {
+  fill: var(--highlight-color);
 }
 
 .link-button:active {
@@ -43,7 +48,8 @@
 }
 
 .link-button svg path {
-  fill: var(--primary-text-color);
+  fill: var(--white);
+  transition: fill var(--transition-duration) var(--transition-function);
 }
 
 .snow {
