--- a/src/components/Navbar/styles.module.css
+++ b/src/components/Navbar/styles.module.css
@@ -1,9 +1,7 @@
 .nav {
-  backdrop-filter: blur(5px);
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.30);
-  display: flex;
+  background-color: var(--contrast-background-color, var(--white));
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
   left: 0;
-  min-height: 5.625rem;
   padding: 1rem;
   position: fixed;
   right: 0;
@@ -13,8 +11,7 @@
   z-index: 3;
 }
 
-.static {
-  background-color: var(--white);
+.visible {
   translate: 0;
 }
 
@@ -28,6 +25,7 @@
 }
 
 .nav-links {
+  align-items: center;
   display: flex;
   flex: 1;
   gap: 1.5rem;
@@ -36,7 +34,7 @@
 .link {
   background-color: transparent;
   border-radius: var(--border-radius);
-  color: var(--primary-color);
+  color: var(--contrast-text-color, var(--primary-color));
   padding: 0.5rem;
   text-decoration: none;
   transition: all var(--quick-transition-duration) var(--transition-function);
@@ -44,7 +42,7 @@
 
 .link:hover,
 .link.active {
-  background-color: var(--primary-color);
+  background-color: var(--highlight-color);
   color: var(--white);
 }
 
@@ -53,12 +51,13 @@
   outline: var(--outline);
 }
 
+/* Accordion */
 .accordion-button {
   align-items: center;
   background-color: transparent;
   border: none;
   border-radius: var(--border-radius);
-  color: var(--primary-color);
+  color: var(--contrast-text-color, var(--primary-color));
   cursor: pointer;
   display: flex;
   padding: 0.5rem;
@@ -66,12 +65,99 @@
 }
 
 .accordion-button:hover {
-  background-color: var(--secondary-light-color);
+  background-color: var(--secondary-color);
 }
 
 .accordion-button svg {
   height: 1.5rem;
-  fill: var(--primary-color);
+  fill: var(--contrast-text-color, var(--primary-color));
   transition: transform var(--quick-transition-duration) var(--transition-function);
   width: 1.5rem;
+}
+
+.accordion-container {
+  position: relative;
+}
+
+.accordion-container:focus {
+  outline: var(--outline);
+}
+
+.accordion-container:is(:hover, :focus) .accordion {
+  scale: 1 1;
+}
+
+.accordion-container:is(:hover, :focus) svg {
+  transform: rotateX(180deg);
+}
+
+.accordion {
+  background-color: var(--white);
+  border-radius: var(--border-radius);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+  list-style: none;
+  position: absolute;
+  overflow: hidden;
+  right: 0;
+  scale: 0 0;
+  top: 2.7rem;
+  transform-origin: top right;
+  transition: scale var(--quick-transition-duration) var(--transition-function);
+  width: 10.2rem;
+}
+
+.accordion-item {
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  transition: background-color var(--quick-transition-duration) var(--transition-function);
+}
+
+.accordion-item:hover {
+  background-color: var(--secondary-color);
+}
+
+.theme-container {
+  border: 0.1875rem solid var(--primary-text-color);
+  border-radius: var(--border-radius);
+  background-color: var(--secondary-light-color);
+  display: flex;
+  padding: 0.5rem;
+}
+
+.color {
+  --left-multiply: 0;
+
+  border: 0.1875rem solid var(--primary-text-color);
+  border-radius: 50%;
+  display: inline-flex;
+  height: 2rem;
+  left: calc(-0.85rem * var(--left-multiply));
+  min-width: 2rem;
+  position: relative;
+}
+
+.color:nth-of-type(2) {
+  --left-multiply: 1;
+}
+
+.color:nth-of-type(3) {
+  --left-multiply: 2;
+}
+
+.color:nth-of-type(4) {
+  --left-multiply: 3;
+}
+
+.color:nth-of-type(5) {
+  --left-multiply: 4;
+}
+
+@media only screen and (max-width: 44rem) {
+  .nav-content {
+    flex-direction: column;
+  }
+
+  .nav-links {
+    flex-direction: column;
+  }
 }
