--- a/src/components/DaysOfCodeCard/styles.module.css
+++ b/src/components/DaysOfCodeCard/styles.module.css
@@ -15,7 +15,7 @@
 .container {
   background-color: var(--secondary-color);
   border-radius: var(--border-radius);
-  color: var(--primary-text-color);
+  color: var(--contrast-text-color, var(--primary-text-color));
   padding: 1rem;
   transition: transform var(--transition-duration) var(--transition-function);
   text-decoration: none;
